Adjust footer text spacing, responsive font sizes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
     <div class="row">
       <div class="col">
         <div class="subtitle">Smart Contracts. Masternodes. Oracles.</div>
-        <div class="title">Cryptocurrency. Smarter.</div>
+        <div class="title">Cryptocurrency. <span class="font-weight-bold">Smarter.</span></div>
       </div>
     </div>
   </div>
@@ -60,7 +60,15 @@
     <div class="row py-5">
       <div class="col-sm">
         <h1>Decentralized Oracles</h1>
-        <p>Next generation smart contracts powered by real-world data feeds.</p>
+        <p>
+          Next generation smart contracts powered by real-world data feeds.
+        </p>
+        <p>
+          Smart contracts aren't so smart without data from the real world.
+          When you execute a smart contract, you're passing tokens around which
+          have real value. Oracles therefore need to be trusted, and so we'll
+          be using practical Byzantine fault-tolerance (PBFT).
+        </p>
       </div>
       <div class="col-sm section-image">
         <img src="../../assets/images/oracles.svg" height="223" alt="oracles">
@@ -144,7 +152,7 @@
                     </tr>
                     <tr>
                       <td>Miners</td>
-                      <td class="text-right">9</td>
+                      <td class="text-right">7</td>
                     </tr>
                     <tr>
                       <td>Masternodes</td>
