--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -2,57 +2,60 @@
   <div class="container">
     <div class="row">
       <div class="col-sm">
-        <h1>Information</h1>
-        <div>
-          <a href="https://github.com/akroma-project/akroma/wiki/Masternodes">Masternodes</a>
-        </div>
-        <div>
-          <a href="https://github.com/akroma-project/akroma/wiki/Decentralized-Oracles">Oracles</a>
-        </div>
-        <div>
-          <a href="https://github.com/akroma-project/akroma/wiki/Experience">Experience</a>
-        </div>
-        <div>
-          <a href="https://github.com/akroma-project/akroma/wiki/Compatability">Compatibility</a>
-        </div>
-        <div>
-          <a href="https://github.com/akroma-project/akroma/wiki/Governance">Governance</a>
-        </div>
-        <div>
-          <a href="https://github.com/akroma-project/akroma/wiki/Scalability">Scalability</a>
-        </div>
+        <h2 class="title">Information</h2>
+        <ul>
+          <li>
+            <a href="https://github.com/akroma-project/akroma/wiki/Masternodes">Masternodes</a>
+          </li>
+          <li>
+            <a href="https://github.com/akroma-project/akroma/wiki/Decentralized-Oracles">Oracles</a>
+          </li>
+          <li>
+            <a href="https://github.com/akroma-project/akroma/wiki/Experience">Experience</a>
+          </li>
+          <li>
+            <a href="https://github.com/akroma-project/akroma/wiki/Compatability">Compatibility</a>
+          </li>
+          <li>
+            <a href="https://github.com/akroma-project/akroma/wiki/Governance">Governance</a>
+          </li>
+          <li>
+            <a href="https://github.com/akroma-project/akroma/wiki/Scalability">Scalability</a>
+          </li>
+        </ul>
       </div>
       <div class="col-sm">
-        <h1>Community</h1>
+        <h2 class="title">Community</h2>
 
-        <div>
-          <a routerLink="/">Team</a>
-        </div>
-        <div>
-          <a href="https://medium.com/akroma">Blog</a>
-        </div>
-        <div>
-          <a href="https://discordapp.com/invite/KWC8wtT">Discord</a>
-        </div>
-        <div>
-          <a href="https://twitter.com/akroma_io">Twitter</a>
-        </div>
+        <ul>
+          <li>
+            <a routerLink="/">Team</a>
+          </li>
+          <li>
+            <a href="https://medium.com/akroma">Blog</a>
+          </li>
+          <li>
+            <a href="https://discordapp.com/invite/KWC8wtT">Discord</a>
+          </li>
+          <li>
+            <a href="https://twitter.com/akroma_io">Twitter</a>
+          </li>
+        </ul>
       </div>
       <div class="col-sm">
-        <h1>Resources</h1>
+        <h2 class="title">Resources</h2>
 
-        <div>
-          <a href="https://wallet.akroma.io/">Web Wallet</a>
-        </div>
-        <div>
-          <a href="https://explorer.akroma.io">Block Explorer</a>
-        </div>
-        <div>
-          <a href="https://stats.akroma.io">Network Stats</a>
-        </div>
-        <div>
-          <a href="https://twitter.com/akroma_io_tips">Tip Bot</a>
-        </div>
+        <ul>
+          <li>
+            <a href="https://wallet.akroma.io/">Web Wallet</a>
+          </li>
+          <li>
+            <a href="https://explorer.akroma.io">Block Explorer</a>
+          </li>
+          <li>
+            <a href="https://stats.akroma.io">Network Stats</a>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
