--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -15,17 +15,17 @@
           <a class="nav-link" href="https://wallet.akroma.io">Wallet</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://explorer.akroma.io">Explorer</a>
+          <a class="nav-link" href="https://explorer.akroma.io">Blockchain Explorer</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://stats.akroma.io/">Network</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="https://discord.gg/3tF5rF8">Community</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="team">Team</a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </div>
