--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -9,3 +9,12 @@ h1 {
 .underline {
   text-decoration: underline;
 }
+
+@include media-breakpoint-down(sm) {
+  h1 {
+    font-size: 2rem;
+  }
+  h2 {
+    font-size: 1.5rem;
+  }
+}
