--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Work+Sans:400,700');
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:400,500,700"');
 @import 'variables';
 @import '~bootstrap/scss/bootstrap';
 // @import '~@fortawesome/fontawesome-free-webfonts/scss/fontawesome';
