Update Oracle body copy

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -65,9 +65,9 @@
         </p>
         <p>
           Smart contracts aren't so smart without data from the real world.
-          When you execute a smart contract, you're passing tokens around which
-          have real value. Oracles therefore need to be trusted, and so we'll
-          be using practical Byzantine fault-tolerance (PBFT).
+          When smart contracts execute, tokens are passed around which have
+          real value. Oracles need to be trusted, therefore, Akroma will be
+          using practical Byzantine fault-tolerance (PBFT).
         </p>
       </div>
       <div class="col-sm section-image">
