Add Team section

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -189,3 +189,113 @@
     </div>
   </div>
 </section>
+
+<section class="section-wrapper">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col">
+        <h1>Team</h1>
+      </div>
+    </div>
+    <div class="row py-5">
+      <div class="col-sm">
+        <div class="card">
+          <img class="card-img-top" src="../../assets/team/eric.png" alt="Eric Polerecky">
+          <div class="card-body">
+            <h5 class="card-title">Eric Polerecky</h5>
+            <p class="card-text">
+              Technologist
+            </p>
+            <i class="fab fa-discord"></i> detroitpro
+          </div>
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="card">
+          <img class="card-img-top" src="../../assets/team/ian.jpg" alt="Ian DesJardins">
+          <div class="card-body">
+            <h5 class="card-title">Ian DesJardins</h5>
+            <p class="card-text">
+              Developer
+            </p>
+            <i class="fab fa-discord"></i> codenbrew
+          </div>
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="card">
+          <img class="card-img-top" src="../../assets/team/gun.jpg" alt="Gunveer Natt">
+          <div class="card-body">
+            <h5 class="card-title">Gunveer Natt</h5>
+            <p class="card-text">
+              Mobile Developer
+            </p>
+            <i class="fab fa-discord"></i> gunatt
+          </div>
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="card">
+          <img class="card-img-top" src="../../assets/team/meg.jpg" alt="Megan Mayle">
+          <div class="card-body">
+            <h5 class="card-title">Megan Mayle</h5>
+            <p class="card-text">
+              Community Manager
+            </p>
+            <i class="fab fa-discord"></i> missmeg703
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row py-5">
+        <div class="col-sm">
+          <div class="card">
+            <img class="card-img-top" src="../../assets/team/skoller.png" alt="Stephen Koller">
+            <div class="card-body">
+              <h5 class="card-title">Stephen Koller</h5>
+              <p class="card-text">
+                Designer + Developer
+              </p>
+              <i class="fab fa-discord"></i> skoller
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card">
+            <img class="card-img-top" src="../../assets/team/andrew.jpg" alt="Andrew Hainen">
+            <div class="card-body">
+              <h5 class="card-title">Andrew Hainen</h5>
+              <p class="card-text">
+                Developer
+              </p>
+              <i class="fab fa-discord"></i> WaffleHouse
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card">
+            <img class="card-img-top" src="../../assets/team/stephen.png" alt="Stephen Cavaliere">
+            <div class="card-body">
+              <h5 class="card-title">Stephen Cavaliere</h5>
+              <p class="card-text">
+                Developer
+              </p>
+              <i class="fab fa-discord"></i> delasteve
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card">
+            <img class="card-img-top" src="../../assets/images/akroma-logo.svg" alt="Team Contact">
+            <div class="card-body">
+              <h5 class="card-title">Team Contact</h5>
+              <p class="card-text">
+                Media Contact
+              </p>
+              <i class="fab fa-discord"></i>@Core Team
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
+</section>
