feat: add team center alignment

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,9 @@
     <div class="row">
       <div class="col">
         <div class="subtitle">Smart Contracts. Masternodes. Oracles.</div>
-        <div class="title">Cryptocurrency. <span class="font-weight-bold">Smarter.</span></div>
+        <div class="title">Cryptocurrency.
+          <span class="font-weight-bold">Smarter.</span>
+        </div>
       </div>
     </div>
   </div>
@@ -17,8 +19,7 @@
       <div class="col-md-6 col-lg-6">
         <h1 class="title">What is Akroma?</h1>
         <p class="content">
-          Akroma is a cryptocurrency and application development platform
-          focused on creating a governance model that will reward long-term,
+          Akroma is a cryptocurrency and application development platform focused on creating a governance model that will reward long-term,
           sustainable development and design.
         </p>
       </div>
@@ -35,20 +36,17 @@
       <div class="col-sm">
         <h1>Masternodes</h1>
         <p>
-          Masternodes help protect and scale the Akroma network by validating
-          transactions and acting as a decentralization
-          incentive. Running a masternode is rewarded with Akroma.
+          Masternodes help protect and scale the Akroma network by validating transactions and acting as a decentralization incentive.
+          Running a masternode is rewarded with Akroma.
         </p>
 
         <p>
-          The more nodes a cryptocurrency network has, the more prone it becomes
-          to tampering and attacks.
+          The more nodes a cryptocurrency network has, the more prone it becomes to tampering and attacks.
         </p>
 
         <p>
-          To protect against 51% attacks coming from centralized miner farms,
-          the incentives for running a node and mining
-          have been unbundled.
+          To protect against 51% attacks coming from centralized miner farms, the incentives for running a node and mining have been
+          unbundled.
         </p>
       </div>
     </div>
@@ -64,10 +62,9 @@
           Next generation smart contracts powered by real-world data feeds.
         </p>
         <p>
-          Smart contracts aren't so smart without data from the real world.
-          When smart contracts execute, tokens are passed around which have
-          real value. Oracles need to be trusted, therefore, Akroma will be
-          using practical Byzantine fault-tolerance (PBFT).
+          Smart contracts aren't so smart without data from the real world. When smart contracts execute, tokens are passed around
+          which have real value. Oracles need to be trusted, therefore, Akroma will be using practical Byzantine fault-tolerance
+          (PBFT).
         </p>
       </div>
       <div class="col-sm section-image">
@@ -86,14 +83,12 @@
       <div class="col-sm">
         <h1>Sustainable Governance</h1>
         <p>
-          The Akroma governance model is focused on creating a sustainable
-          application development platform while contributing back to the
-          greater community.
+          The Akroma governance model is focused on creating a sustainable application development platform while contributing back
+          to the greater community.
         </p>
 
         <p>
-          Akroma governance will be handled off-chain, follow the Linux
-          Foundation’s model and work to create a Technical Meritocracy
+          Akroma governance will be handled off-chain, follow the Linux Foundation’s model and work to create a Technical Meritocracy
           using Open Governance.
         </p>
 
@@ -190,15 +185,15 @@
   </div>
 </section>
 
-<section class="section-wrapper">
+<section class="section-wrapper team">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col">
         <h1>Team</h1>
       </div>
     </div>
-    <div class="row py-5">
-      <div class="col-sm">
+    <div class="row justify-content-center">
+      <div class="col-md-3">
         <div class="card">
           <img class="card-img-top" src="../../assets/team/eric.png" alt="Eric Polerecky">
           <div class="card-body">
@@ -210,31 +205,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm">
-        <div class="card">
-          <img class="card-img-top" src="../../assets/team/ian.jpg" alt="Ian DesJardins">
-          <div class="card-body">
-            <h5 class="card-title">Ian DesJardins</h5>
-            <p class="card-text">
-              Developer
-            </p>
-            <i class="fab fa-discord"></i> codenbrew
-          </div>
-        </div>
-      </div>
-      <div class="col-sm">
-        <div class="card">
-          <img class="card-img-top" src="../../assets/team/gun.jpg" alt="Gunveer Natt">
-          <div class="card-body">
-            <h5 class="card-title">Gunveer Natt</h5>
-            <p class="card-text">
-              Mobile Developer
-            </p>
-            <i class="fab fa-discord"></i> gunatt
-          </div>
-        </div>
-      </div>
-      <div class="col-sm">
+      <div class="col-md-3">
         <div class="card">
           <img class="card-img-top" src="../../assets/team/meg.jpg" alt="Megan Mayle">
           <div class="card-body">
@@ -246,56 +217,69 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="row py-5">
-        <div class="col-sm">
-          <div class="card">
-            <img class="card-img-top" src="../../assets/team/skoller.png" alt="Stephen Koller">
-            <div class="card-body">
-              <h5 class="card-title">Stephen Koller</h5>
-              <p class="card-text">
-                Designer + Developer
-              </p>
-              <i class="fab fa-discord"></i> skoller
-            </div>
-          </div>
-        </div>
-        <div class="col-sm">
-          <div class="card">
-            <img class="card-img-top" src="../../assets/team/andrew.jpg" alt="Andrew Hainen">
-            <div class="card-body">
-              <h5 class="card-title">Andrew Hainen</h5>
-              <p class="card-text">
-                Developer
-              </p>
-              <i class="fab fa-discord"></i> WaffleHouse
-            </div>
-          </div>
-        </div>
-        <div class="col-sm">
-          <div class="card">
-            <img class="card-img-top" src="../../assets/team/stephen.png" alt="Stephen Cavaliere">
-            <div class="card-body">
-              <h5 class="card-title">Stephen Cavaliere</h5>
-              <p class="card-text">
-                Developer
-              </p>
-              <i class="fab fa-discord"></i> delasteve
-            </div>
-          </div>
-        </div>
-        <div class="col-sm">
-          <div class="card">
-            <img class="card-img-top" src="../../assets/images/akroma-logo.svg" alt="Team Contact">
-            <div class="card-body">
-              <h5 class="card-title">Team Contact</h5>
-              <p class="card-text">
-                Media Contact
-              </p>
-              <i class="fab fa-discord"></i>@Core Team
-            </div>
+      <div class="col-md-3">
+        <div class="card">
+          <img class="card-img-top" src="../../assets/team/stephen.png" alt="Stephen Cavaliere">
+          <div class="card-body">
+            <h5 class="card-title">Stephen Cavaliere</h5>
+            <p class="card-text">
+              Developer
+            </p>
+            <i class="fab fa-discord"></i> delasteve
           </div>
         </div>
       </div>
+      <div class="col-md-3">
+        <div class="card">
+          <img class="card-img-top" src="../../assets/team/ian.jpg" alt="Ian DesJardins">
+          <div class="card-body">
+            <h5 class="card-title">Ian DesJardins</h5>
+            <p class="card-text">
+              Developer
+            </p>
+            <i class="fab fa-discord"></i> codenbrew
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row justify-content-center mt-2">
+      <div class="col-md-3">
+        <div class="card">
+          <img class="card-img-top" src="../../assets/team/gun.jpg" alt="Gunveer Natt">
+          <div class="card-body">
+            <h5 class="card-title">Gunveer Natt</h5>
+            <p class="card-text">
+              Mobile Developer
+            </p>
+            <i class="fab fa-discord"></i> gunatt
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card">
+          <img class="card-img-top" src="../../assets/team/skoller.png" alt="Stephen Koller">
+          <div class="card-body">
+            <h5 class="card-title">Stephen Koller</h5>
+            <p class="card-text">
+              Designer + Developer
+            </p>
+            <i class="fab fa-discord"></i> skoller
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card">
+          <img class="card-img-top" src="../../assets/team/andrew.jpg" alt="Andrew Hainen">
+          <div class="card-body">
+            <h5 class="card-title">Andrew Hainen</h5>
+            <p class="card-text">
+              Developer
+            </p>
+            <i class="fab fa-discord"></i> WaffleHouse
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
