--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -54,8 +54,6 @@ $angle-top-and-bottom: polygon(0 0, 100% 5%, 100% 95%, 0 100%);
     text-align: center;
   }
 
-
-
   &.oracles {
     color: #fff;
     background-color: #520A47;
@@ -66,7 +64,7 @@ $angle-top-and-bottom: polygon(0 0, 100% 5%, 100% 95%, 0 100%);
     // transparent background hack
     // see https://css-tricks.com/snippets/css/transparent-background-images/
     &::after {
-      content: "";
+      content: '';
       clip-path: $angle-top-and-bottom;
       background: url('../../assets/images/expressway.jpg');
       background-size: cover;
@@ -97,8 +95,15 @@ $angle-top-and-bottom: polygon(0 0, 100% 5%, 100% 95%, 0 100%);
     .text {
       font-size: 0.875rem;
     }
+
     .font-white {
       color: #fff;
+    }
+  }
+
+  &.team {
+    .card {
+      height: 100%;
     }
   }
 }
