Improve team section styling, change bg footer

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,8 +16,8 @@
 <section class="section-wrapper subhero">
   <div class="container">
     <div class="row justify-content-around">
-      <div class="col-md-6 col-lg-6">
-        <h1 class="title">What is Akroma?</h1>
+      <div class="col-md-6">
+        <h1 class="title text-center">Introducing Akroma</h1>
         <p class="content">
           Akroma is a cryptocurrency and application development platform focused on creating a governance model that will reward long-term,
           sustainable development and design.
@@ -27,7 +27,7 @@
   </div>
 </section>
 
-<section class="section-wrapper">
+<section class="section-wrapper masternodes">
   <div class="container align-items-center">
     <div class="row py-5">
       <div class="col-sm section-image">
@@ -74,7 +74,7 @@
   </div>
 </section>
 
-<section class="section-wrapper">
+<section class="section-wrapper governance">
   <div class="container">
     <div class="row py-5">
       <div class="col-sm section-image">
@@ -187,8 +187,8 @@
 
 <section class="section-wrapper team">
   <div class="container">
-    <div class="row justify-content-center">
-      <div class="col">
+    <div class="row justify-content-around">
+      <div class="col-md-6 text-center">
         <h1>Team</h1>
       </div>
     </div>
@@ -197,7 +197,7 @@
         <div class="card">
           <img class="card-img-top" src="../../assets/team/eric.png" alt="Eric Polerecky">
           <div class="card-body">
-            <h5 class="card-title">Eric Polerecky</h5>
+            <h5 class="card-title text-nowrap">Eric Polerecky</h5>
             <p class="card-text">
               Technologist
             </p>
@@ -209,7 +209,7 @@
         <div class="card">
           <img class="card-img-top" src="../../assets/team/meg.jpg" alt="Megan Mayle">
           <div class="card-body">
-            <h5 class="card-title">Megan Mayle</h5>
+            <h5 class="card-title text-nowrap">Megan Mayle</h5>
             <p class="card-text">
               Community Manager
             </p>
@@ -221,7 +221,7 @@
         <div class="card">
           <img class="card-img-top" src="../../assets/team/stephen.png" alt="Stephen Cavaliere">
           <div class="card-body">
-            <h5 class="card-title">Stephen Cavaliere</h5>
+            <h5 class="card-title text-nowrap">Stephen Cavaliere</h5>
             <p class="card-text">
               Developer
             </p>
@@ -233,7 +233,7 @@
         <div class="card">
           <img class="card-img-top" src="../../assets/team/ian.jpg" alt="Ian DesJardins">
           <div class="card-body">
-            <h5 class="card-title">Ian DesJardins</h5>
+            <h5 class="card-title text-nowrap">Ian DesJardins</h5>
             <p class="card-text">
               Developer
             </p>
@@ -243,12 +243,12 @@
       </div>
     </div>
 
-    <div class="row justify-content-center mt-2">
+    <div class="row justify-content-center mt-2 py-5">
       <div class="col-md-3">
         <div class="card">
           <img class="card-img-top" src="../../assets/team/gun.jpg" alt="Gunveer Natt">
           <div class="card-body">
-            <h5 class="card-title">Gunveer Natt</h5>
+            <h5 class="card-title text-nowrap">Gunveer Natt</h5>
             <p class="card-text">
               Mobile Developer
             </p>
@@ -260,7 +260,7 @@
         <div class="card">
           <img class="card-img-top" src="../../assets/team/skoller.png" alt="Stephen Koller">
           <div class="card-body">
-            <h5 class="card-title">Stephen Koller</h5>
+            <h5 class="card-title text-nowrap">Stephen Koller</h5>
             <p class="card-text">
               Designer + Developer
             </p>
@@ -272,7 +272,7 @@
         <div class="card">
           <img class="card-img-top" src="../../assets/team/andrew.jpg" alt="Andrew Hainen">
           <div class="card-body">
-            <h5 class="card-title">Andrew Hainen</h5>
+            <h5 class="card-title text-nowrap">Andrew Hainen</h5>
             <p class="card-text">
               Developer
             </p>
