--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -3,14 +3,14 @@
 }
 
 h1 {
-  margin: 1.5rem 0 1rem
+  margin: 1.5rem 0 1rem;
 }
 
 .underline {
   text-decoration: underline;
 }
 
-@include media-breakpoint-down(sm) {
+@include media-breakpoint-down(md) {
   h1 {
     font-size: 2rem;
   }
