--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -193,7 +193,7 @@
       </div>
     </div>
     <div class="row justify-content-center">
-      <div class="col-md-3">
+      <div class="col-md-4">
         <div class="card">
           <img class="card-img-top" src="../../assets/team/eric.png" alt="Eric Polerecky">
           <div class="card-body">
@@ -201,11 +201,13 @@
             <p class="card-text">
               Technologist
             </p>
-            <i class="fab fa-discord"></i> detroitpro
+            <p class="card-text">
+              <i class="fab fa-discord"></i> detroitpro
+            </p>
           </div>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-4">
         <div class="card">
           <img class="card-img-top" src="../../assets/team/meg.jpg" alt="Megan Mayle">
           <div class="card-body">
@@ -213,11 +215,13 @@
             <p class="card-text">
               Community Manager
             </p>
-            <i class="fab fa-discord"></i> missmeg703
+            <p class="card-text">
+              <i class="fab fa-discord"></i> missmeg703
+            </p>
           </div>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-4">
         <div class="card">
           <img class="card-img-top" src="../../assets/team/stephen.png" alt="Stephen Cavaliere">
           <div class="card-body">
@@ -225,26 +229,16 @@
             <p class="card-text">
               Developer
             </p>
-            <i class="fab fa-discord"></i> delasteve
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card">
-          <img class="card-img-top" src="../../assets/team/ian.jpg" alt="Ian DesJardins">
-          <div class="card-body">
-            <h5 class="card-title text-nowrap">Ian DesJardins</h5>
             <p class="card-text">
-              Developer
+              <i class="fab fa-discord"></i> delasteve
             </p>
-            <i class="fab fa-discord"></i> codenbrew
           </div>
         </div>
       </div>
     </div>
 
     <div class="row justify-content-center mt-2 py-5">
-      <div class="col-md-3">
+      <div class="col-md-4">
         <div class="card">
           <img class="card-img-top" src="../../assets/team/gun.jpg" alt="Gunveer Natt">
           <div class="card-body">
@@ -252,11 +246,13 @@
             <p class="card-text">
               Mobile Developer
             </p>
-            <i class="fab fa-discord"></i> gunatt
+            <p class="card-text">
+              <i class="fab fa-discord"></i> gunatt
+            </p>
           </div>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-4">
         <div class="card">
           <img class="card-img-top" src="../../assets/team/skoller.png" alt="Stephen Koller">
           <div class="card-body">
@@ -264,19 +260,40 @@
             <p class="card-text">
               Designer + Developer
             </p>
-            <i class="fab fa-discord"></i> skoller
+            <p class="card-text">
+              <i class="fab fa-discord"></i> skoller
+            </p>
           </div>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-4">
+        <div class="card">
+          <img class="card-img-top" src="../../assets/team/ian.jpg" alt="Ian DesJardins">
+          <div class="card-body">
+            <h5 class="card-title text-nowrap">Ian DesJardins</h5>
+            <p class="card-text">
+              Developer
+            </p>
+            <p class="card-text">
+              <i class="fab fa-discord"></i> codenbrew
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row justify-content-center">
+      <div class="col-md-4">
         <div class="card">
           <img class="card-img-top" src="../../assets/team/andrew.jpg" alt="Andrew Hainen">
           <div class="card-body">
             <h5 class="card-title text-nowrap">Andrew Hainen</h5>
             <p class="card-text">
-              Developer
+              Designer
             </p>
-            <i class="fab fa-discord"></i> WaffleHouse
+            <p class="card-text">
+              <i class="fab fa-discord"></i> WaffleHouse
+            </p>
           </div>
         </div>
       </div>
