--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top navbar-expand-sm">
+<nav class="navbar fixed-top navbar-expand-md">
   <div class="container">
     <a class="navbar-brand" routerLink="">
       <img src="../../../assets/images/akroma-logo-on-black.svg" alt="Akroma">
@@ -18,14 +18,28 @@
           <a class="nav-link" href="https://explorer.akroma.io">Blockchain Explorer</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://stats.akroma.io/">Network</a>
-        </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link" href="https://discord.gg/3tF5rF8">Community</a>
+          <a class="nav-link" href="https://stats.akroma.io">Network</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="team">Team</a>
-        </li> -->
+          <a class="nav-link" href="https://discord.gg/KWC8wtT">
+            <i class="fab fa-lg fa-discord"></i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://twitter.com/akroma_io">
+            <i class="fab fa-lg fa-twitter"></i>
+          </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="https://medium.com/akroma">
+              <i class="fab fa-lg fa-medium-m"></i>
+            </a>
+          </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/akroma-project">
+            <i class="fab fa-lg fa-github"></i>
+          </a>
+        </li>
       </ul>
     </div>
   </div>
