restored social links (they are a little tall, will adjust later

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,7 +28,7 @@
 </section>
 
 <section class="section-wrapper masternodes">
-  <div class="container align-items-center">
+  <div class="container">
     <div class="row py-5">
       <div class="col-sm section-image">
         <img src="../../assets/images/masternodes.svg" height="279" alt="Masternodes">
@@ -204,6 +204,12 @@
             <p class="card-text">
               <i class="fab fa-discord"></i> detroitpro
             </p>
+            <p class="card-text">
+              <i class="fab fa-twitter"></i> <a href="http://twitter.com/detroitpro">detroitpro</a>
+            </p>
+            <p class="card-text">
+              <i class="fab fa-github"></i> <a href="http://github.com/detroitpro">detroitpro</a>
+            </p>
           </div>
         </div>
       </div>
@@ -218,6 +224,9 @@
             <p class="card-text">
               <i class="fab fa-discord"></i> missmeg703
             </p>
+            <p class="card-text">
+              <i class="fab fa-twitter"></i> <a href="https://twitter.com/missmeg703">missmeg703</a>
+            </p>
           </div>
         </div>
       </div>
@@ -231,6 +240,12 @@
             </p>
             <p class="card-text">
               <i class="fab fa-discord"></i> delasteve
+            </p>
+            <p class="card-text">
+              <i class="fab fa-twitter"></i> <a href="https://twitter.com/stevecavaliere">stevecavaliere</a>
+            </p>
+            <p class="card-text">
+              <i class="fab fa-github"></i> <a href="http://github.com/delasteve">delasteve</a>
             </p>
           </div>
         </div>
@@ -263,6 +278,12 @@
             <p class="card-text">
               <i class="fab fa-discord"></i> skoller
             </p>
+            <p class="card-text">
+              <i class="fab fa-twitter"></i> <a href="https://twitter.com/StephenKoller">StephenKoller</a>
+            </p>
+            <p class="card-text">
+              <i class="fab fa-github"></i> <a href="https://github.com/StephenKoller">StephenKoller</a>
+            </p>
           </div>
         </div>
       </div>
@@ -276,6 +297,12 @@
             </p>
             <p class="card-text">
               <i class="fab fa-discord"></i> codenbrew
+            </p>
+            <p class="card-text">
+              <i class="fab fa-twitter"></i> <a href="https://twitter.com/codenbrewr">codenbrewr</a>
+            </p>
+            <p class="card-text">
+              <i class="fab fa-github"></i> <a href="https://github.com/iandesj">iandesj</a>
             </p>
           </div>
         </div>
@@ -293,6 +320,12 @@
             </p>
             <p class="card-text">
               <i class="fab fa-discord"></i> WaffleHouse
+            </p>
+            <p class="card-text">
+              <i class="fab fa-twitter"></i> <a href="https://twitter.com/ahainen">ahainen</a>
+            </p>
+            <p class="card-text">
+              <i class="fab fa-dribbble"></i> <a href="https://dribbble.com/ahainen">ahainen</a>
             </p>
           </div>
         </div>
