Fix horizontal scroll on mobile widths

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -31,7 +31,7 @@
   <div class="container">
     <div class="row py-5">
       <div class="col-sm section-image">
-        <img src="../../assets/images/masternodes.svg" height="279" alt="Masternodes">
+        <img class="masternodes-img" src="../../assets/images/masternodes.svg" alt="Masternodes">
       </div>
       <div class="col-sm">
         <h1>Masternodes</h1>
