remove r from ian

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -299,7 +299,7 @@
               <i class="fab fa-discord"></i> codenbrew
             </p>
             <p class="card-text">
-              <i class="fab fa-twitter"></i> <a href="https://twitter.com/codenbrewr">codenbrewr</a>
+              <i class="fab fa-twitter"></i> <a href="https://twitter.com/codenbrew">codenbrew</a>
             </p>
             <p class="card-text">
               <i class="fab fa-github"></i> <a href="https://github.com/iandesj">iandesj</a>
